--- a/mscore/manual/sources/MuseScore-de.html
+++ b/mscore/manual/sources/MuseScore-de.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_b6bc3700cd9c25ad47d529469c6d4c85.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_b80bdfe301a4c7afc193e1d02d7281c7.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"musescore":{"ytlang":"de"}});
@@ -13,7 +13,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/de/handbuch/handbuch' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_59b91a212b7eab40c05807c179375612.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_24fa6a135f20a7079098997ecc96781a.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Freies Notensatzprogramm</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/de">http://musescore.org</a> on Di, 10.01.2012</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/de">http://musescore.org</a> on Mo, 05.03.2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -142,21 +142,28 @@ gestartet. Im <samp class="mode">Wiedergabemodus</samp> sind die folgenden Befeh
 <li><kbd><kbd>Leertaste</kbd></kbd> Start/Stop</li>
 <li><kbd><kbd>&larr;</kbd></kbd>  zum vorherigen Akkord</li>
 <li><kbd><kbd>&rarr;</kbd></kbd> zum nächsten Akkord</li>
-<li><kbd><kbd>Strg</kbd>+<kbd>&larr;kbd&gt;</kbd> zum vorherigen Takt</kbd></li>
+<li><kbd><kbd>Strg</kbd>+<kbd>&larr;</kbd></kbd> zum vorherigen Takt</li>
 <li><kbd><kbd>Strg</kbd>+<kbd>&rarr;</kbd></kbd>  zum nächsten Takt</li>
-<li><kbd><kbd>Pos1</kbd></kbd> Zurück zum Anfang</li>
+<li><kbd><kbd>Pos1</kbd></kbd> zurück zum Anfang</li>
 <li><kbd><kbd>F11</kbd></kbd> zeigt das Wiedergabepult</li>
 </ul>
 <p>Durch wiederholtes Drücken des Wiedergabe-Buttons <img src="/sites/musescore.org/files/play.png" alt="play.png" title="play.png" width="34" height="33" class="inline" /> verlassen Sie den Wiedergabemodus wieder.</p>
-<p>MuseScore nimmt die Wiedergabe an der Stelle wieder auf, an der Sie angehalten haben. Wenn Sie eine Note in Ihrer Partitur auswählen, startet MuseScore beim nächsten Mal die Wiedergabe von dieser dort. In der Symbolleiste finden Sie außerdem einen Button um zum Anfang der Partitur zurückzuspringen.</p>
+<p>MuseScore nimmt die Wiedergabe an der Stelle wieder auf, an der Sie angehalten haben. Wenn Sie eine Note in Ihrer Partitur auswählen, startet MuseScore beim nächsten Mal die Wiedergabe von dort. In der Symbolleiste finden Sie außerdem einen Button, um zum Anfang der Partitur zurückzuspringen.</p>
+<p>Um auch die Wiederholungen bei der Wiedergabe abzuspielen, aktivieren Sie den <img src="/sites/musescore.org/files/play-repeats_0.png" alt="play-repeats.png" title="play-repeats.png" width="34" height="33" class="inline" /> <i>Wiederholungen ein-/ausschalten</i>-Button.</p>
 <h3>Wiedergabepult</h3>
 <p>Das Wiedergabepult bietet Ihnen weitere Einstellungen vorzunehmen, wie zum Beispiel die Wiedergabegeschwindigkeit, die Startposition und die Wiedergabelautstärke. Sie finden es auch im Menu unter <kbd><samp class="menu">Ansicht<samp> → <samp class="menuitem">Wiedergabepult<samp></samp></samp></samp></samp></kbd>.</p>
 <p><img src="/sites/musescore.org/files/playpanel_0.png" alt="das Wiedergabepult erlaubt Ihnen, Tempo und Lautstärke einzustellen" title="das Wiedergabepult erlaubt Ihnen, Tempo und Lautstärke einzustellen" width="298" height="211" class="inline" /></p>
 <h3>Fehlerdiagnose</h3>
 <h4 class="v0-9-5">Nur Klavier</h4>
-<p><strong class="label">Version 0.9.5 oder frühere:</strong> Wenn Sie andere Instrumente für die Wiedergabe verwenden möchten als das voreingestellte Klavier, müssen Sie den eingestellten SoundFont unter <kbd><samp class="menu">Bearbeiten</samp> → <samp class="menuitem">Einstellungen...</samp> → <samp class="tab">I/O</samp> tab</kbd> ändern. Mehr können Sie darüber im Kapitel <a href="http://musescore.org/de/handbuch/soundfont" title="SoundFont">SoundFont</a> erfahren.</p>
-<h4>Ubuntu und Sond</h4>
-<p>Wenn Sie Schwierigkeiten mit der Wiedergabe auf einem Ubuntu-System haben, empfehlen wir Ihnen mindestens die MuseScore-Version 0.9.5 oder eine neuere zu verwenden, siehe hierzu die Download-Seite auf musescore.org. Bei Fragen oder Problemen wenden Sie sich bitte an das Support-Forum auf musescore.org.</p>
+<p><strong class="label">Version 0.9.5 oder frühere:</strong> Wenn Sie andere Instrumente für die Wiedergabe verwenden möchten als das voreingestellte Klavier, müssen Sie den eingestellten SoundFont unter <kbd><samp class="menu">Bearbeiten</samp> → <samp class="menuitem">Einstellungen...</samp> → <samp class="tab">I/O</samp> </kbd> ändern. Mehr können Sie darüber im Kapitel <a href="http://musescore.org/de/handbuch/soundfont" title="SoundFont">SoundFont</a> erfahren.</p>
+<h4>Ubuntu und Sound</h4>
+<p>Wenn Sie Schwierigkeiten mit der Wiedergabe auf einem Ubuntu-System haben, empfehlen wir Ihnen mindestens die MuseScore-Version 0.9.5 oder eine neuere zu verwenden – siehe hierzu die Download-Seite auf musescore.org. Bei Fragen oder Problemen wenden Sie sich bitte an das Support-Forum auf musescore.org.</p>
+<div class="field field-type-filefield field-field-file">
+    <div class="field-items">
+            <div class="field-item odd">
+                    <div class="filefield-file clear-block"><div class="filefield-icon field-icon-image-png"><img class="field-icon-image-png"  alt="image/png icon" src="http://musescore.org/sites/all/modules/filefield/icons/protocons/16x16/mimetypes/image-x-generic.png" /></div><a href="http://musescore.org/sites/musescore.org/files/play-repeats_0.png" type="image/png; length=182">play-repeats.png</a></div>        </div>
+        </div>
+</div>
   </div>
 <div id="node-128" class="section-2">
   <h1 class="book-heading">Arpeggios</h1>
@@ -304,7 +311,7 @@ Wähle Sie die gewünschten Tonart  aus und klicken Sie auf &bdquo;Weiter&rdquo;
 <li>Um Texte zu ändern, siehe <a href="http://musescore.org/de/handbuch/text-bearbeiten" title="Text bearbeiten">Text bearbeiten</a>. Um einen fehlenden Titel (oder anderen Text) hinzuzufügen, benutzen Sie aus dem Menü <kbd><samp class="menu">Einfügen</samp> → <samp class="submenu">Text</samp> → <samp class="menuitem">Titel</samp></kbd> (oder eine andere Textart).</li>
 <li>Um Instrumente hinzuzufügen, zu löschen oder deren Reihenfolge zu ändern, benutzen Sie aus dem Menü <kbd><samp class="menu">Einfügen</samp> → <samp class="menuitem">Stimmen/Instrumente...</samp></kbd>.</li>
 </ul>
-<p>Siehe auch: <a href="http://musescore.org/de/handbuch/vorzeichen-tonart" title="Vorzeichen (Tonart)">Vorzeichen (Tonart)</a>, <a href="http://musescore.org/nb/håndbok/taktart" title="Taktart">Taktart</a>, <a href="http://musescore.org/de/handbuch/schlüssel" title="Schlüssel">Schlüssel</a>.</p>
+<p>Siehe auch: <a href="http://musescore.org/de/freelinking/Vorzeichen%20%28Tonart%29" class="freelinking noexist" rel="nofollow">Vorzeichen (Tonart)</a>, <a href="http://musescore.org/nb/håndbok/taktart" title="Taktart">Taktart</a>, <a href="http://musescore.org/de/handbuch/schlüssel" title="Schlüssel">Schlüssel</a>.</p>
 <h3 id="neu-vorlagen">Vorlagen</h3>
 <p>Die erste Seite des Assistenten für eine neue Partitur hat eine Option, um eine Partitur aus einer Vorlage zu erzeugen (siehe <a href="print/book/export/html/98#neu-titel">Titel, Komponist und weitere Informationen</a> oben für Details). Um eine Partitur mit dieser Methode zu erzeugen, wählen Sie die Vorlagen-Option und klicken Sie auf &bdquo;Weiter&rdquo;. </p>
 <p>Die nächste Seite zeigt eine Auswahl von Vorlagen. Wählen Sie eine aus und klicken Sie auf &bdquo;Weiter&rdquo;. Danach fahren Sie wie gewohnt fort.</p>
@@ -552,7 +559,7 @@ Die Besonderheiten zur Schlagzeugnotation können Sie im Folgenden erfahren.</p>
 <p>Siehe auch: <a href="http://musescore.org/de/handbuch/akkordbezeichnungen" title="Akkordbezeichnungen">Akkordbezeichnungen</a>, <a href="http://musescore.org/de/handbuch/liedtext" title="Liedtext">Liedtext</a>, <a href="http://musescore.org/de/handbuch/rahmen" title="Rahmen">Rahmen</a>, <a href="http://musescore.org/de/handbuch/bearbeitungsmodus" title="Bearbeitungsmodus">Bearbeitungsmodus</a></p>
   </div>
 <div id="node-164" class="section-2">
-  <h1 class="book-heading">Vorzeichen (Tonart)</h1>
+  <h1 class="book-heading">Tonart</h1>
   <p><strong>Tonarten</strong>, bzw. die entsprechenden Vorzeichen, können gesetzt oder verändert werden, indem ein Symbol aus der Tonartenpalette auf einen Takt oder einen bereits bestehenden Satz von Vorzeichen in der Partitur gezogen wird.<br />
 <img src="/sites/musescore.org/files/key-palette.png" alt="Tonartpalette" title="Tonartpalette" width="172" height="248" class="inline" /></p>
 <p><kbd><kbd>F9</kbd></kbd> zeigt das Palettenfenster.</p>
@@ -632,9 +639,9 @@ Die Besonderheiten zur Schlagzeugnotation können Sie im Folgenden erfahren.</p>
 <p>Marken sind Namen, die wir einer Taktposition geben. Zwei Sprungmarken ("Anfang", "Ende") bezeichnen den Anfang und das Ende eines Stückes und müssen nicht speziell vereinbart werden.</p>
 <p>Beispiele:</p>
 <p>Bei der Sprunganweisung <i>Da Capo</i> springt die Wiedergabe an den Anfang und spielt das gesamte Stück noch einmal (bis zur impliziten <i>Ende</i>-Marke).</p>
-<p>Bei der Sprunganweisung <i>Da Capo al Fine</i> springt die Wiedergabe an den Anfang um dann bis zur Marke <i>Fine</i> zu spielen.</p>
-<p><i>Dal Segno al Fine</i> (oder <i>D.S. al Fine</i>) springt zur <i>Segno</i> Marke und spielt dann bis zur Marke <i>Fine</i></p>
-<p><i>Dal Segno al Coda</i> springt zur <i>Segno</i> Marke und spielt dann bis zur ersten <i>Coda</i> Marke. Das Spiel wird dann an der zweiten Codamarke fortgesetzt.</p>
+<p>Bei der Sprunganweisung <i>Da Capo al Fine</i> springt die Wiedergabe an den Anfang, um dann bis zur Marke <i>Fine</i> zu spielen.</p>
+<p><i>Dal Segno al Fine</i> (oder <i>D.S. al Fine</i>) springt zur <i>Segno</i>-Marke und spielt dann bis zur Marke <i>Fine</i></p>
+<p><i>Dal Segno al Coda</i> springt zur <i>Segno</i>-Marke und spielt dann bis zur ersten <i>Coda</i>-Marke. Das Spiel wird dann an der zweiten <i>Coda</i>-Marke fortgesetzt. Die Eigenschaften der Sprünge werden per Rechtsklick an der <i>D.S. al Coda</i>-Marke eingestellt.</p>
 <p>Siehe auch: <a href="http://musescore.org/de/handbuch/volta" title="Volta">Volta</a></p>
   </div>
 <div id="node-136" class="section-2">
