--- a/mscore/manual/sources/MuseScore-es.html
+++ b/mscore/manual/sources/MuseScore-es.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_47036cf133a06a81e01a1b124484b724.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_494e435fe62597817f2a99336e7ce65b.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"musescore":{"ytlang":"es"}});
@@ -13,7 +13,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/es/manual/manual' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_59b91a212b7eab40c05807c179375612.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_24fa6a135f20a7079098997ecc96781a.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Programa libre de notación musical</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/es">http://musescore.org</a> on Mar, 01/10/2012</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/es">http://musescore.org</a> on Lun, 03/05/2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -149,10 +149,11 @@ Uninstall.exe /S</code></p>
   <p>Escribir notas y silencios en el pentagrama requiere cuatro pasos básicos:</p>
 <ol>
 <li>Escoge la posición inicial para comenzar a escribir</li>
-<li>Selecciona el <samp class="mode">Modo de escritura de notas</samp></li>
+<li>Selecciona el <samp class="mode">Modo de escritura de notas</samp><B> ¡ATENCIÓN! (En este punto se comente la mayoría de los errores)</b></li>
 <li>Elige la duración de la figura que deseas escribir</li>
 <li>Escoge la entonación de la nota o escribe el silencio mediante el teclado, el ratón o un teclado MIDI</li>
 </ol>
+<p>Para añadir notas que se <B> superponen en el tiempo, pero no comienzan o finalizan a la vez, </b> véase <a href="http://musescore.org/es/manual/voces" title="Voces">Voces</a>. Para escribir acordes, continua leyendo.</p>
 <h3>Primer Paso: Posición de inicio</h3>
 <p>En primer lugar selecciona una nota o silencio en la partitura para definir la posición a partir de la cual comenzarás a escribir. Al introducir notas en MuseScore se sustituyen las previamente existentes con aquellas que escribes (es decir, que sobrescribe en lugar de insertar). Sin embargo, puedes insertar compases nuevos en cualquier punto (véase <a href="http://musescore.org/es/manual/trabajando-con-compases" title="Trabajando con Compases">Trabajando con Compases</a>, sección "Insertar") o usar <a href="http://musescore.org/es/manual/copiar-y-pegar" title="copiar y pegar">copiar y pegar</a> para mover un pasaje completo. </p>
 <h3>Segundo Paso: Modo de escritura de notas</h3>
@@ -219,7 +220,8 @@ Uninstall.exe /S</code></p>
 <p>Nota: el teclado MIDI permite la introducción de una nota o acorde por cada pulsación. Este modo de escritura de notas (a menudo llamado "step-time entry", o escritura por pasos) es rápido y fiable. Algunos programas de notación musical intentan interpretar lo que se toca en el teclado para escribir en tiempo real ("real-time entry") el valor de las figuras. El músico tocará un pasaje con el teclado y el programa intentará determinar la notación. Sin embargo, los resultados frecuentemente son poco fiables, incluso cuando toca un músico con experiencia empleando un caro software. El objetivo de MuseScore se centra en sistemas fiables de escritura de notas.</p>
 <p>Si posee múltiples dispositivos MIDI conectados a su ordenador quizá necesite especificar a MuseScore cual es el teclado MIDI. En la versión 0.9.6 y posteriores vaya a la pestaña <kbd><samp class="menu">Editar</samp> → <samp class="menuitem">Preferencias...</samp> → <samp class="tab">E/S</samp></kbd> (Mac: <kbd><samp class="menu">MuseScore</samp> → <samp class="menuitem">Preferencias...</samp></kbd>). En el diálogo de preferencias, pulse sobre la pestaña E/S y seleccione su dispositivo en la sección con la etiqueta "Seleccionar interfaz de entrada para PortMidi".</p>
 <h3>Colores</h3>
-<p>MuseScore colorea las notas extremas del registro en amarillo o rojo en las versiones 0.9.5 y posteriores. Las notas por encima o por debajo del registro confortable para un aficionado aparecerán amarillas, y rojas si están en los extremos del registro confortable para un profesional. Los colores tienen un carácter informativo y aparecen en la pantalla del ordenador, pero no en las copias impresas. Para deshabilitar el marcado de notas por colores en las versiones 0.9.6 y posteriores, escoge en el cuadro de diálogo que despliega el menu <kbd><samp class="menu">Editar</samp> → <samp class="menuitem">Preferencias...</samp></kbd> (Mac: <kbd><samp class="menu">MuseScore</samp> → <samp class="menuitem">Preferencias...</samp></kbd>), la etiqueta <kbd><samp>Entrada de Notas</samp></kbd>, y desmarca "Colorear notas fuera del registro útil".</p>
+<p>Las notas dentro del registro de un instrumento o voz aparecen negras. Sin embargo, desde la versión 0.9.5, Musescore marca de color rojo las notas que exceden el registro posible del instrumento. Para algunos instrumentos, la amplitud del registro depende de la habilidad del músico (como en el viento, la cuerda o la voz). Para esos instrumentos, las notas fuera del registro de un principiante aparecen de color amarillo, y las notas fuera del rango habitual de un profesional, en rojo.</p>
+<p>Los colores tienen un carácter informativo y aparecen en la pantalla del ordenador, pero no en las copias impresas. Para deshabilitar el marcado de notas por colores en las versiones 0.9.6 y posteriores, escoge en el cuadro de diálogo que despliega el menu <kbd><samp class="menu">Editar</samp> → <samp class="menuitem">Preferencias...</samp></kbd> (Mac: <kbd><samp class="menu">MuseScore</samp> → <samp class="menuitem">Preferencias...</samp></kbd>), la etiqueta <kbd><samp>Entrada de Notas</samp></kbd>, y desmarca "Colorear notas fuera del registro útil".</p>
 <h3>See also</h3>
 <ul>
 <li><a href="http://musescore.org/es/manual/notación-de-percusión" title="Notación de Percusión">Notación de Percusión</a></li>
@@ -911,8 +913,8 @@ Para crear un silencio de compás marca el compás y presiona <kbd><kbd>Supr</kb
 <ul>
 <li><code>FluidR3_GM.sf2</code> (141 MB descomprimida)<br />
  Enlace de descarga: <a class="freelinking external" href="http://www.musescore.org/download/fluid-soundfont.tar.gz">Fluid-soundfont.tar.gz</a></li>
-<li><code>GeneralUser_GS_1.43-FluidSynth.sf2</code> (29.8 MB descomprimida)<br />
- Enlace de descarga: <a class="freelinking external" href="http://www.schristiancollins.com/soundfonts/GeneralUser_GS_1.43-FluidSynth.zip">GeneralUser_GS_1.43-FluidSynth.zip</a> (Por cortesía de <a href="http://www.schristiancollins.com/generaluser.php">S. Christian Collins)</a></li>
+<li><code>GeneralUser_GS_1.44-FluidSynth.sf2</code> (29.8 MB descomprimida)<br />
+ Enlace de descarga: <a class="freelinking external" href="http://www.schristiancollins.com/soundfonts/GeneralUser_GS_1.44-MuseScore.zip">GeneralUser_GS_1.44-FluidSynth.zip</a> (Por cortesía de <a href="http://www.schristiancollins.com/generaluser.php">S. Christian Collins)</a></li>
 <li>TimGM6mb.sf2 (5.7 MB descomprimida)<br />
  Enlace de descarga: <a class="freelinking external" href="http://mscore.svn.sourceforge.net/viewvc/mscore/trunk/mscore/share/sound/TimGM6mb.sf2">TimGM6mb.sf2 modificada</a> (Por cortesía de <a href="http://ocmnet.com/saxguru/Timidity.htm#sf2">Tim Brechbill</a>)</li>
 </ul>
