--- a/mscore/manual/sources/MuseScore-gl.html
+++ b/mscore/manual/sources/MuseScore-gl.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_1e19b5e265f4b105bf7f3c247604d28d.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_32bb6511bfc9b30e721cc52fb10c7614.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"musescore":{"ytlang":"gl"}});
@@ -13,7 +13,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/gl/manual-galego/manual-galego' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_59b91a212b7eab40c05807c179375612.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_24fa6a135f20a7079098997ecc96781a.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Software libre de composición e notación musical</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/gl">http://musescore.org</a> on Mar, 01/10/2012</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/gl">http://musescore.org</a> on Lun, 03/05/2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -1001,8 +1001,8 @@ Ao premer o botón Reproducir <img src="/sites/musescore.org/files/play.png" alt
 </ul>
 <p>Ao publicar a súa solicitude de axuda ou informar dun erro, inclúa, por favor, toda a información seguinte que coñeza:</p>
 <ul>
-<li>A versión do MuseScore que está a utilizar (p.ex., versión 0.9.5) ou o número da revisión se está a empregar unha versión previa (p.ex. revisión 1944)</li>
-<li>O sistema operativo no que o está a executar (p.ex. Windows Vista, Mac OS 10.5 ou Ubuntu 9.04)</li>
+<li>A versión do MuseScore que está a utilizar (p.ex., versión 1.0) ou o número da revisión se está a empregar unha versión previa (p.ex. revisión 3996)</li>
+<li>O sistema operativo no que o está a executar (p.ex. Windows Vista, Windows 7, Mac OS 10.6 ou Ubuntu 10.10)</li>
 <li>Reduza os informes no seguidor de erros a un erro por informe</li>
 <li>Lembre que o obxectivo dun informe de erros non é só mostrar o erro senón axudar a que os demais poidan reproducir o erro facilmente</li>
 </ul>
