--- a/mscore/manual/sources/MuseScore-nl.html
+++ b/mscore/manual/sources/MuseScore-nl.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_db39cfe4a74d98775a3a278c2fd51379.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_8048ef2e4f1cee5f8b95ccaf427851b1.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"musescore":{"ytlang":"nl"}});
@@ -13,7 +13,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/nl/handboek/handboek' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_59b91a212b7eab40c05807c179375612.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_24fa6a135f20a7079098997ecc96781a.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Gratis muzieknotatiesoftware</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Afgehaald van <a href="http://musescore.org/nl">http://musescore.org</a> op di, 10/01/2012</div>
+    <div class="print-site_name">Afgehaald van <a href="http://musescore.org/nl">http://musescore.org</a> op ma, 05/03/2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -1076,6 +1076,9 @@ Om dit probleem te verhelpen:</p>
 </ul>
   </div>
 </div>
+<div id="node-15234" class="section-2">
+  <h1 class="book-heading">Appendix</h1>
+    </div>
 </div>
 </div>
     <div class="print-taxonomy"></div>
