--- a/mscore/manual/sources/MuseScore-zh-hans.html
+++ b/mscore/manual/sources/MuseScore-zh-hans.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_1171df935e61099d09a162312c5ae588.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_ab383f6f14ef91893f31e962860294d0.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"musescore":{"ytlang":"zh-hans"}});
@@ -13,7 +13,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/zh-hans/%E7%94%A8%E6%88%B7%E6%89%8B%E5%86%8C/%E7%94%A8%E6%88%B7%E6%89%8B%E5%86%8C' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_47c9e2684ee390c9d549bb76e8f34c34.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_24fa6a135f20a7079098997ecc96781a.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,13 +21,13 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">免费的作曲与乐谱软件</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">来自 <a href="http://musescore.org/zh-hans">http://musescore.org</a> 周 星期五, 02/03/2012</div>
+    <div class="print-site_name">来自 <a href="http://musescore.org/zh-hans">http://musescore.org</a> 周 星期一, 03/05/2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
     <div class="print-content"><div id="node-5541" class="section-1">
   <h1 class="book-heading">用户手册</h1>
-  <p>本手册适用于 MuseScore 0.9.2 或更新的版本。如果想参与本手册的翻译与改进，请到<a href="http://www.musescore.org/forum/8">MuseScore 文档论坛</a> 发贴申请成为用户手册的贡献者。</p>
+  <p>本手册适用于 MuseScore 0.9.4 或更新的版本。如果想参与本手册的翻译与改进，请到 <a href="http://www.musescore.org/forum/8">MuseScore 文档论坛</a> 申请成为用户手册的贡献者。</p>
   <div id="node-5439" class="section-2">
   <h1 class="book-heading">开始</h1>
   <p>本章节辅助用户的安装和第一次运行 MuseScore，还将告诉用户如何创建一个新的乐谱。</p>
@@ -35,34 +35,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
 <div id="node-5440" class="section-2">
   <h1 class="book-heading">使用基础</h1>
   <p>前述"开始"章节指导用户如何<a href="http://musescore.org/zh-hans/用户手册/安装" title="安装">安装</a> 和 <a href="http://musescore.org/en/handbook/create-new-score" title="create new score">创建一份新乐谱</a> 的过程。"使用基础" 章将提供 MuseScore 的概述，并且描述操作乐谱的一般方法。</p>
-  <div id="node-5448" class="section-3">
-  <h1 class="book-heading">拷贝和粘贴</h1>
-  <p>MuseScore 允许拷贝单个音符或较大的选择区域。 0.9.4 版包含了大量关于拷贝粘贴的改进，包括支持按住shift键选择的区域（非整小节）。 0.9.3 及更早版本仅能选择多个完整小节，并且易用程度不佳。（见 <a href="print/book/export/html/5541#copy-paste-0.9.3"> 下面 </a> ）。</p>
-<h3>拷贝</h3>
-<ol>
-<li>点击要选择的首个音符</li>
-<li><kbd><kbd>Shift</kbd>+<kbd class="mouse">click</kbd></kbd> 点击要选择的最后一个音符，出现一个蓝色的方框，高亮标识区域中所有元素。</li>
-<li>点击菜单 <kbd><samp class="menu">编辑</samp> → <samp class="menuitem">拷贝</samp></kbd></li>
-</ol>
-<h3>粘贴</h3>
-<ol>
-<li>点击要粘贴区域的首个音符或小节</li>
-<li>点击菜单 <kbd><samp class="menu">编辑</samp> → <samp class="menuitem">粘贴</samp></kbd></li>
-</ol>
-<h3 id="copy-paste-0.9.3"> 0.9.3 及更早版本的用法</h3>
-<h4>拷贝</h4>
-<ol>
-<li>点击一个小节的空白处能够选中整个小节，出现一个蓝色方框高亮标记选择区域。</li>
-<li>如需扩展选择区域，在另一个小节的空白处按 <kbd><kbd>Shift</kbd>+<kbd class="mouse">click</kbd></kbd>。</li>
-<li>点击菜单 <kbd><samp class="menu">编辑</samp> → <samp class="menuitem">拷贝</samp></kbd></li>
-</ol>
-<h4>粘贴</h4>
-<ol>
-<li>点击要粘贴到小节的空白处</li>
-<li>点击菜单 <kbd><samp class="menu">编辑</samp> → <samp class="menuitem">粘贴</samp></kbd></li>
-</ol>
-  </div>
-<div id="node-5449" class="section-3">
+  <div id="node-5449" class="section-3">
   <h1 class="book-heading">编辑模式</h1>
   <p>在 <samp class="mode">编辑模式</samp> 中可以编辑许多元素：</p>
 <ul>
@@ -114,21 +87,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
 <div id="node-5453" class="section-2">
   <h1 class="book-heading">制谱</h1>
   <p>在前面的 "使用基础" 章节我们学习了如何 <a href="http://musescore.org/en/handbook/note-entry" title="note entry">输入音符</a> 和使用 <a href="http://musescore.org/zh-hans/用户手册/符号面板" title="符号面板">符号面板</a>，"制谱" 这一章详细的描述了更多种乐谱制作操作，还包括一些高级制谱操作。</p>
-  <div id="node-5456" class="section-3">
-  <h1 class="book-heading">临时升降号</h1>
-  <p>拖拽临时升降号面板上的符号到乐谱音符来添加或修改 <strong>临时升降号</strong>。<br />
-<img src="/sites/musescore.org/files/accidental-palette.png" alt="Accidentals palette" title="Accidentals palette" width="168" height="203" class="inline" /></p>
-<p>如果只想改变音符的音高，选中音符并按下：</p>
-<ul>
-<li><kbd><kbd>Up</kbd></kbd>：音高增加一个半音。</li>
-<li><kbd><kbd>Down</kbd></kbd>：音高降低一个半音。</li>
-<li><kbd><kbd>Ctrl</kbd>+<kbd>Up</kbd></kbd>：音高增加一个八度。</li>
-<li><kbd><kbd>Ctrl</kbd>+<kbd>Down</kbd></kbd>：音高降低一个八度。</li>
-</ul>
-<p>MuseScore 自动为改变音高的音符配置合适的临时升降号，如需手动修正一个临时升降号或放置一个辅助升降号（带小括号的临时升降号），那么从符号面板中拖拽升降号到音符。如果在这之后又用线位置改变了音高，则之前这些手动修改操作会被清除。</p>
-<p>菜单<kbd><samp class="menu">音符</samp> → <samp class="menuitem">音高修正</samp></kbd> 尝试为整个乐谱的音符猜测合适的临时升降号。</p>
-  </div>
-<div id="node-5459" class="section-3">
+  <div id="node-5459" class="section-3">
   <h1 class="book-heading">小节线</h1>
   <h3>修改小节线类型</h3>
 <p>从小节线面板上拖拽一个小节线符号到乐谱中可改变小节线类型。</p>
@@ -142,20 +101,6 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
 <p><img src="/sites/musescore.org/files/grandstaff1_0.png" alt="Grand staff" title="Grand staff" width="258" height="127" class="inline" /></p>
 <p>参见：<a href="http://musescore.org/zh-hans/用户手册/小节操作" title="小节操作">小节操作</a></p>
   </div>
-<div id="node-5461" class="section-3">
-  <h1 class="book-heading">连谱号</h1>
-  <h3>删除</h3>
-<p>选中连谱号，按 <kbd><kbd>Del</kbd></kbd></p>
-<h3>添加</h3>
-<p>拖拽连谱号面板中的一个连谱号到乐谱某一行的首个小节前。<br />
-<img src="/sites/musescore.org/files/brackets-palette.png" alt="Brackets Palette" title="Brackets Palette" width="135" height="84" class="inline" /></p>
-<h3>修改</h3>
-<p>拖拽连谱号面板中的一个连谱号到乐谱中某一个已有的连谱号位置。</p>
-<h3>水平位移</h3>
-<p>在0.9.4或更新的版本中允许调整连谱号的水平位置，双击连谱号，并按 <kbd><kbd>Shift</kbd>+<kbd>Left</kbd></kbd> 或 <kbd><kbd>Shift</kbd>+<kbd>Right</kbd></kbd> 左右移动。</p>
-<h3>编辑</h3>
-<p>双击一个连谱号进入 <samp class="mode"><a href="http://musescore.org/zh-hans/用户手册/编辑模式" title="编辑模式">编辑模式</a></samp>，在 <samp class="mode">编辑模式</samp> 里可以上下拖拽操作柄，移动到谱表行的某个谱表上。</p>
-  </div>
 <div id="node-5462" class="section-3">
   <h1 class="book-heading">呼吸与停顿符号</h1>
   <p>要放置一个 <strong>呼吸符号</strong>，从呼吸符号面板中拖拽一个呼吸符号到乐谱音符，呼吸符号放置在音符之后。 在0.9.5或更早的版本中呼吸符号出现在拖拽到的音符位置<em>之前</em>。</p>
@@ -163,18 +108,6 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
 <p>乐谱中的呼吸符号：</p>
 <p><img src="/sites/musescore.org/files/breath_0.png" alt="Breath" title="Breath" width="284" height="181" class="inline" /></p>
 <p><strong>Caesura</strong> (informally called <strong>tram lines</strong> or <strong>railroad tracks</strong>) 操作方法相同，只在0.9.6或更新的版本中可用。</p>
-  </div>
-<div id="node-5463" class="section-3">
-  <h1 class="book-heading">谱号</h1>
-  <p>拖拽谱号面板中的谱号到一个小节位置可添加<strong>谱号</strong>，到一个已有谱号位置可修改<strong>谱号</strong>。按 <kbd><kbd>F9</kbd></kbd> 来显示或隐藏 <a href="http://musescore.org/zh-hans/用户手册/符号面板" title="符号面板">符号面板</a>。</p>
-<p><img src="/sites/musescore.org/files/clef-palette_0.png" alt="Clefs palette" title="Clefs palette" width="170" height="284" class="inline" /></p>
-<h3>修改</h3>
-<p>除了拖拽符号面板中的一个谱号到乐谱，还可以从乐谱中拖拽谱号到乐谱中另一个谱号位置，需要按住<kbd><kbd>Shift</kbd> + <kbd class="mousebutton">click</kbd> + <kbd class="action">拖拽</kbd></kbd>。</p>
-<h3>添加</h3>
-<p>拖拽符号面板中的谱号到一个小节的空白位置，可在小节起点创建变更谱号；拖拽谱号到一个音符处，创建一个小节中间的变更谱号。如果该小节不是首个小节，谱号会画的小一些。</p>
-<h3>移除</h3>
-<p>选择一个谱号，按<kbd><kbd>Del</kbd></kbd>键。</p>
-<p>注意：改变谱号不会改变任何音符的音高，而只是移动音符位置。</p>
   </div>
 <div id="node-5464" class="section-3">
   <h1 class="book-heading">跨谱表符杠</h1>
@@ -184,13 +117,6 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
 <p>按<kbd><kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>Down</kbd></kbd> 将选中音符移动到下一个谱表上 （Mac：<kbd><kbd>⌘</kbd>+<kbd>Shift</kbd>+<kbd>Down</kbd></kbd>。）<br />
 <img src="/sites/musescore.org/files/crossbeams2_0.png" alt="Selected note moved to lower staff" title="Selected note moved to lower staff" width="106" height="159" class="inline" /></p>
 <p>参见：<a href="http://musescore.org/zh-hans/用户手册/小节线" title="小节线">小节线</a> 关于跨谱表小节线（比如在大谱表上）。</p>
-  </div>
-<div id="node-5466" class="section-3">
-  <h1 class="book-heading">倚音</h1>
-  <p><strong>短倚音</strong> (Acciaccatura) 的样子是一个较小的音符，符干中间被一条斜线穿过，<strong>长倚音</strong> (Appoggiatura) 不带那条斜线，它们都位于普通音符的前面。</p>
-<p>拖拽倚音 <a href="http://musescore.org/zh-hans/用户手册/符号面板" title="符号面板">符号面板</a> （在0.9.5及更早的版本中它叫做音符）上的符号到乐谱中的音符上，可以创建倚音。</p>
-<p><img src="/sites/musescore.org/files/grace-palette.png" alt="grace-palette.png" title="grace-palette.png" width="168" height="64" class="inline" /></p>
-<p>参见：维基百科 <a href="http://en.wikipedia.org/wiki/Grace_note">倚音</a></p>
   </div>
 <div id="node-5469" class="section-3">
   <h1 class="book-heading">线条符号</h1>
@@ -225,17 +151,6 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
 <h3>文字</h3>
 <p>反复文字记号，如"D.C. al Fine" 或 "D.S. al Coda" 位于反复记号 <a href="http://musescore.org/zh-hans/用户手册/符号面板" title="符号面板">符号面板</a>。</p>
 <p><img src="/sites/musescore.org/files/repeats-palette.png" alt="Repeats palette contains the symbols for measure repeat, segno and coda. It also contains &#039;D.S.&#039;, &#039;D.C.&#039;, and Fine text." title="Repeats palette contains the symbols for measure repeat, segno and coda. It also contains &#039;D.S.&#039;, &#039;D.C.&#039;, and Fine text." width="168" height="220" class="inline" /></p>
-  </div>
-<div id="node-5499" class="section-3">
-  <h1 class="book-heading">连音线</h1>
-  <p><strong>连音线</strong> 是一条连接两个音高相同音符的曲线，如需连接多个不同音高的音，见 <a href="http://musescore.org/zh-hans/用户手册/连句线" title="连句线">连句线</a>。</p>
-<h3>方法一</h3>
-<p>选中第一个音：<br />
-<img src="/sites/musescore.org/files/tie1_0.png" alt="First note selected" title="First note selected" width="136" height="78" class="inline" /></p>
-<p>按<kbd><kbd>+</kbd></kbd> 创建一条连音线：(在0.9.3或更早的版本中快捷键是 <kbd><kbd>Shift</kbd>+<kbd>S</kbd></kbd>)<br />
-<img src="/sites/musescore.org/files/tie2_0.png" alt="Slur to adjacent note" title="Slur to adjacent note" width="136" height="78" class="inline" /></p>
-<h3>方法二</h3>
-<p>如需在 <samp class="mode"><a href="http://musescore.org/zh-hans/用户手册/音符输入" title="音符输入">音符输入</a></samp> 模式中添加连音线，在连音线起点音符处按 <kbd><kbd>+</kbd></kbd>。 在 0.9.3 或更早的版本中必须在输入第一个音符<em>之前</em>按 <kbd><kbd>+</kbd></kbd>。</p>
   </div>
 <div id="node-5501" class="section-3">
   <h1 class="book-heading">拍号</h1>
@@ -281,53 +196,12 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
 <h4>Ubuntu 系统的发声</h4>
 <p>如果用户的 Ubuntu 系统发声有问题，那么建议用户升级到 0.9.5 或更新的版本，获取最新版本软件的说明在软件下载页面中。如有问题请到论坛提问。</p>
   </div>
-<div id="node-5483" class="section-3">
-  <h1 class="book-heading">速度</h1>
-  <p>可通过播放面板和乐谱中的速度记号改变播放速度。</p>
-<h3>播放面板</h3>
-<ul>
-<li>显示播放面板：点击菜单<kbd><samp class="menu">显示</samp> → <samp class="menuitem">播放面板</samp></kbd></li>
-<li>拖动速度滑动条改变每分钟拍数。</li>
-</ul>
-<h3>速度记号</h3>
-<ul>
-<li>选中一个音符，作为添加速度记号的位置</li>
-<li>点击菜单：<kbd><samp class="menu">创建</samp> → <samp class="submenu">文字...</samp> → <samp class="menuitem">速度...</samp></kbd></li>
-<li>按 <kbd><samp class="button">确定</samp></kbd> 按钮完成</li>
-</ul>
-<p>注意在 0.9.3 或更早的版本中，不能在速度记号对话框里修改速度记号或每分钟拍数，只能在乐谱中添加速度记号后改变。</p>
-<p>已有的速度记号可双击后进入 <samp class="mode">编辑模式</samp> 修改，用户可按 F2 打开<a href="http://musescore.org/zh-hans/用户手册/文字编辑" title="文字编辑">文字编辑</a> 面板添加一个四分音符或其它时值的音符作为速度记号的节拍标记。<br />
-<img src="/sites/musescore.org/files/met_mark.jpg" alt="Metronome mark: Andante quarter note = 75" title="Metronome mark: Andante quarter note = 75" width="123" height="29" class="inline" /></p>
-<p>现有速度记号的每分钟拍数（BPM）可通过右击文字，在弹出菜单中选择 <kbd><samp class="menuitem">速度属性...</samp></kbd> 来修改。</p>
-<p>注意：如果播放面板中的速度设置如果不是 100%，速度记号的播放会和速度记号设置中的BPM值不一样。</p>
-  </div>
 </div>
 <div id="node-5485" class="section-2">
   <h1 class="book-heading">文字</h1>
   <p>前一章中描述了关于 <a href="http://musescore.org/zh-hans/用户手册/速度" title="速度">速度标记|影响播放速度的文字</a>，除此以外 MuseScore 还有很多种类型的文字。<a href="http://musescore.org/zh-hans/用户手册/歌词" title="歌词">歌词</a>， <a href="http://musescore.org/zh-hans/用户手册/和弦" title="和弦">和弦</a>，力度记号，<a href="http://musescore.org/zh-hans/用户手册/指法" title="指法">指法</a>，标题栏等等。它们都可在主菜单<kbd><samp class="menu">创建</samp> → <samp class="submenu">文字</samp></kbd>中找到。 </p>
 <p>更普通的文字请用谱表文字或谱表行文字，这两种文字的区别是作用于单一的谱表还是作用于整个谱表行。</p>
-  <div id="node-5486" class="section-3">
-  <h1 class="book-heading">文字编辑</h1>
-  <p>双击文字进入<samp class="mode">编辑模式</samp>：<br />
-<img src="/sites/musescore.org/files/textedit_0.png" alt="Sample text in edit mode" title="Sample text in edit mode" width="83" height="101" class="inline" /></p>
-<p>在文字的 <samp class="mode">编辑模式</samp> 中，下列操作可用：</p>
-<ul>
-<li><kbd><kbd>Ctrl</kbd>+<kbd>B</kbd></kbd> Mac: <kbd><kbd>⌘</kbd>+<kbd>B</kbd></kbd>) 切换 <b>粗体</b></li>
-<li><kbd><kbd>Ctrl</kbd>+<kbd>I</kbd></kbd> (Mac: <kbd><kbd>⌘</kbd>+<kbd>I</kbd></kbd>) 切换 <i>斜体</i></li>
-<li><kbd><kbd>Ctrl</kbd>+<kbd>U</kbd></kbd> (Mac: <kbd><kbd>⌘</kbd>+<kbd>U</kbd></kbd>) 切换 <u>下划线</u></li>
-<li><kbd><kbd>Up</kbd></kbd> 在下标模式中开始或结束下标</li>
-<li><kbd><kbd>Down</kbd></kbd> 在下标模式中开始或结束下标</li>
-<li>移动光标：<kbd><kbd>Home</kbd></kbd> <kbd><kbd>End</kbd></kbd> <kbd><kbd>Left</kbd></kbd> <kbd><kbd>Right</kbd></kbd></li>
-<li><kbd><kbd>Backspace</kbd></kbd> 移除光标左边的字符</li>
-<li><kbd><kbd>Delete</kbd></kbd> 移除光标右边的字符</li>
-<li><kbd><kbd>Return</kbd></kbd> 换行</li>
-<li><kbd><kbd>F2</kbd></kbd> 显示字符面板，用于输入特殊的文字和符号。</li>
-</ul>
-<p>字符面板:<br />
-<img src="/sites/musescore.org/files/special-text-symbols_1.png" alt="The text palette contains methods for changing text alignment, style, size, and font, plus buttons for inserting symbols into the text such as a quarter note or special characters such as a copyright symbol or accented letters." title="The text palette contains methods for changing text alignment, style, size, and font, plus buttons for inserting symbols into the text such as a quarter note or special characters such as a copyright symbol or accented letters." width="562" height="263" class="inline" /></p>
-<p>参见：<a href="http://musescore.org/zh-hans/用户手册/和弦" title="和弦">和弦</a>，<a href="http://musescore.org/zh-hans/用户手册/歌词" title="歌词">歌词</a>，<a href="http://musescore.org/zh-hans/用户手册/占位框" title="占位框">占位框</a>，<a href="http://musescore.org/zh-hans/用户手册/编辑模式" title="编辑模式">编辑模式</a></p>
-  </div>
-<div id="node-5488" class="section-3">
+  <div id="node-5488" class="section-3">
   <h1 class="book-heading">和弦</h1>
   <p>选中一个音符后按 <kbd><kbd>Ctrl</kbd>+<kbd>K</kbd></kbd>输入<strong>和弦名称</strong>，此操作为选中音符添加了一个和弦名称文字对象。</p>
 <ul>
@@ -353,30 +227,6 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
  <tr class="even"><td><a href="http://musescore.org/sites/musescore.org/files/cchords_sym_1.png">cchords_sym.png</a></td><td>11 KB</td> </tr>
 </tbody>
 </table>
-  </div>
-<div id="node-5490" class="section-3">
-  <h1 class="book-heading">歌词</h1>
-  <ol>
-<li>首先输入音符</li>
-<li>选中首个音符</li>
-<li>按 <kbd><kbd>Ctrl</kbd>+<kbd>L</kbd></kbd> 并为首个音符输入歌词</li>
-<li>在当前歌词末尾按 <kbd><kbd>Space</kbd></kbd> 跳到下一个音符</li>
-<li>在音节后面输入连字符 <kbd><kbd>-</kbd></kbd> 跳到下一个音符，音节间由虚线连接。</li>
-<li><kbd><kbd>Shift</kbd>+<kbd>Space</kbd></kbd> 跳到前一个音符</li>
-<li><kbd><kbd>Enter</kbd></kbd> (Mac: <kbd><kbd>Return</kbd></kbd>) 跳到下一段歌词</li>
-</ol>
-<p><img src="/sites/musescore.org/files/adeste.png" alt="Sample lyrics:A-des-te fi-del-es" title="Sample lyrics:A-des-te fi-del-es" width="475" height="220" class="inline" /></p>
-<p>歌词音节（常见于西方语言）可用下划线扩展：<br />
-<img src="/sites/musescore.org/files/lyrics1_0.png" alt="Syllable extension line" title="Syllable extension line" width="351" height="214" class="inline" /></p>
-<p>输入：<kbd>soul, <kbd>_</kbd> <kbd>_</kbd> <kbd>_</kbd> To <kbd>Esc</kbd></kbd>。</p>
-<h3>特殊字符</h3>
-<p>除了极个别几个字符，歌词与普通文字 <a href="http://musescore.org/zh-hans/用户手册/文字编辑" title="文字编辑">编辑</a> 方式相同。如需给音节输入空格、连字符或下划线，请用下列快捷键：</p>
-<ul>
-<li><kbd><kbd>Ctrl</kbd>+<kbd>Space</kbd></kbd> (Mac: <kbd><kbd>⌥</kbd>+<kbd>Space</kbd></kbd>) 输入一个 <samp>空格</samp></li>
-<li><kbd><kbd>Ctrl</kbd>+<kbd>-</kbd></kbd> (Mac: <kbd><kbd>⌥</kbd>+<kbd>-</kbd></kbd>) 输入一个连字符 (<samp>-</samp>)</li>
-<li>仅 Mac 系统：<kbd><kbd>⌥</kbd>+<kbd>_</kbd></kbd> 输入下划线 (<samp>_</samp>) </li>
-</ul>
-<p>参见：<a href="http://musescore.org/zh-hans/用户手册/文字" title="文字">文字</a>，<a href="http://musescore.org/zh-hans/用户手册/和弦" title="和弦">和弦</a>。</p>
   </div>
 </div>
 <div id="node-5491" class="section-2">
@@ -410,24 +260,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
 <div id="node-5495" class="section-2">
   <h1 class="book-heading">技术支持</h1>
   <p>本章描述了关于如何获取 MuseScore 帮助的问题，查找的位置，在论坛上提问的方式，报告软件错误（bug）的小技巧。</p>
-  <div id="node-5540" class="section-3">
-  <h1 class="book-heading">如何报告软件错误及寻求支持</h1>
-  <p>在 <a href="http://musescore.org/en/forum">论坛</a> 上提问前：</p>
-<ul>
-<li>请查看 <a href="http://musescore.org/zh-hans/用户手册">在线用户手册</a>。</li>
-<li>使用站内<a href="http://musescore.org/zh-hans/search">搜索</a> 功能查找<a href="http://musescore.org/en/forum">论坛</a>上是否已经有人问过相同问题了。</li>
-<li>如需报告软件错误，请先使用<a href="http://musescore.org/en/download">最新的预览版</a> 验证错误是否存在，或查看 <a href="http://mscore.svn.sourceforge.net/viewvc/mscore/trunk/mscore/ChangeLog">版本功能修正列表</a> 查找错误是否已被改正。</li>
-</ul>
-<p>当您提出功能需求或报告软件错误时，请尽量详细的添加下列信息：</p>
-<ul>
-<li>所用的 MuseScore 版本信息，例如 0.9.5 版，或预览版的版本号，例如修订版 1944。</li>
-<li>运行的操作系统信息，例如 Windows Vista，Mac OS 10.5 或 Ubuntu 9.04。</li>
-<li>如要报告软件错误，请详细描述能够重现错误的操作步骤，比如点击了哪里，按了哪些键，看到了什么等。如果您也不能通过这些步骤重现错误，则开发者也无法通过这些步骤不能重现该错误，也就无法改正。</li>
-<li>为每一个错误写一个错误报告。</li>
-<li>请注意：错误报告的目的不仅是为了突显问题，而且是为了让其它人更容易的重现并解决它。</li>
-</ul>
   </div>
-</div>
 </div>
 </div>
     <div class="print-taxonomy"></div>
